--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.78.0",
+    "sass-loader": "^16.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
